Fixing Overview Amount of Works Title Misalignment

--- a/orcid-web/src/main/webapp/static/css/orcid.resp.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.resp.css
@@ -4129,6 +4129,21 @@ multiselect .dropdown-menu .dropdown-menu-list{
 	padding-right: 5px;
 }
 
+.workspace-overview ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	list-style-type: none;
+}
+
+.workspace-overview ul li{
+	display: inline-block;
+}
+
+.workspace-overview ul li a{
+	text-overflow: ellipsis;
+}
+
 
 /* Media Queries */
 @media ( max-width : 767px) { /* Mobile */
